--- a/SpringPracticeAssignments/Student-Course/FrontEnd/university/src/App.css
+++ b/SpringPracticeAssignments/Student-Course/FrontEnd/university/src/App.css
@@ -2,20 +2,22 @@
   text-align: center;
 }
 
-.App-logo {
+/*.App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
   pointer-events: none;
-}
+}*/
 
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
+  border:1px solid #000000;
+  height:300px;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: flex-start;
+  justify-content: flex-start;
+  font-size: 25px;
   color: white;
 }
 
