--- a/SpringPracticeAssignments/Student-Course/FrontEnd/university/src/Security/Login.css
+++ b/SpringPracticeAssignments/Student-Course/FrontEnd/university/src/Security/Login.css
@@ -3,6 +3,10 @@
     padding: 60px 0;
   }
 
+  .Text-Color{
+    color: #1849EA;
+  }
+
   .Login form {
     margin: 0 auto;
     max-width: 320px;
