--- a/SpringPracticeAssignments/Student-Course/FrontEnd/university/src/App.css
+++ b/SpringPracticeAssignments/Student-Course/FrontEnd/university/src/App.css
@@ -2,6 +2,15 @@
   text-align: center;
 }
 
+.btn {
+  border: none;
+  background-color: inherit;
+  padding: 14px 28px;
+  font-size: 16px;
+  cursor: pointer;
+  display: inline-block;
+}
+
 /*.App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
@@ -11,6 +20,11 @@
 .button{
     margin:20px;
     padding:10px;
+}
+
+.body{
+    height:100%;
+    width:100%;
 }
 
 .App-header {
