--- a/SpringPracticeAssignments/Student-Course/FrontEnd/university/src/App.css
+++ b/SpringPracticeAssignments/Student-Course/FrontEnd/university/src/App.css
@@ -38,3 +38,13 @@
 .Side {
   display: inline-block !important;
 }
+
+.footer {
+  position: fixed;
+  align-content: center;
+  bottom: 0;
+  width: 12%;
+  text-align: center;
+  margin-right: 50%;
+  padding: 30;
+}
